--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,7 @@
         <javaparser.version>3.8.0</javaparser.version>
         <java-types.version>1.0.1</java-types.version>
         <javax-inject.version>1</javax-inject.version>
+        <javax-activation.version>1.2.0</javax-activation.version>
         <jsr250.version>1.0</jsr250.version>
         <javax-interceptor.version>3.1</javax-interceptor.version>
         <javax-jsp.version>2.3.2-b02</javax-jsp.version>
@@ -1294,6 +1295,11 @@
                 <groupId>javax.inject</groupId>
                 <artifactId>javax.inject</artifactId>
                 <version>${javax-inject.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.activation</groupId>
+                <artifactId>javax.activation</artifactId>
+                <version>${javax-activation.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.measure</groupId>
