--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.8.BUILD-SNAPSHOT</version>
+        <version>2.1.6.BUILD-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -255,6 +255,8 @@
         <maven-project-info-reports.plugin>2.9</maven-project-info-reports.plugin>
         <maven-appassembler-plugin.version>1.8</maven-appassembler-plugin.version>
         <maven-changes-plugin.version>2.9</maven-changes-plugin.version>
+        <maven-source-plugin.skip>false</maven-source-plugin.skip>
+        <maven-source-plugin.attach>true</maven-source-plugin.attach>
         <maven-spotbugs-plugin.version>3.1.8</maven-spotbugs-plugin.version>
         <maven-spotbugs-plugin.skip>false</maven-spotbugs-plugin.skip>
         <maven-pmd-plugin.version>3.12.0</maven-pmd-plugin.version>
@@ -2324,6 +2326,23 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven-source-plugin.version}</version>
+                <configuration>
+                    <skipSource>${maven-source-plugin.skip}</skipSource>
+                    <attach>${maven-source-plugin.attach}</attach>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <version>${maven-enforcer-plugin.version}</version>
                 <executions>
@@ -2549,24 +2568,9 @@
             <properties>
                 <maven-javadoc-plugin.skip>false</maven-javadoc-plugin.skip>
                 <maven-javadoc-plugin.attach>true</maven-javadoc-plugin.attach>
+                <maven-source-plugin.skip>false</maven-source-plugin.skip>
+                <maven-source-plugin.attach>true</maven-source-plugin.attach>
             </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>${maven-source-plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <id>attach-sources</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
         <profile>
             <id>fast</id>
@@ -2597,6 +2601,8 @@
             <properties>
                 <maven-javadoc-plugin.skip>false</maven-javadoc-plugin.skip>
                 <maven-javadoc-plugin.attach>true</maven-javadoc-plugin.attach>
+                <maven-source-plugin.skip>false</maven-source-plugin.skip>
+                <maven-source-plugin.attach>true</maven-source-plugin.attach>
                 <maven-checkstyle-plugin.skip>true</maven-checkstyle-plugin.skip>
                 <maven-remote-resources-plugin.skip>true</maven-remote-resources-plugin.skip>
                 <maven-pmd-plugin.skip>true</maven-pmd-plugin.skip>
