Upgrade the spring-bom and add the jpasskit

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.BUILD-SNAPSHOT</version>
+        <version>2.1.9.BUILD-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -201,6 +201,7 @@
         <jgravatar.version>1.1</jgravatar.version>
         <jadira-usertype.version>7.0.0.CR1</jadira-usertype.version>
         <jmeter-maven-plugin.version>1.10.1</jmeter-maven-plugin.version>
+        <jpasskit.version>0.1.1</jpasskit.version>
         <jquery-webjars.version>1.12.1</jquery-webjars.version>
         <jqueryui-webjars.version>1.12.1</jqueryui-webjars.version>
         <jquerymobile-webjars.version>1.4.5</jquerymobile-webjars.version>
@@ -1267,6 +1268,11 @@
                 <groupId>com.rometools</groupId>
                 <artifactId>rome-propono</artifactId>
                 <version>${rometools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.brendamour</groupId>
+                <artifactId>jpasskit</artifactId>
+                <version>${jpasskit.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.annotation</groupId>
