--- a/pom.xml
+++ b/pom.xml
@@ -127,19 +127,19 @@
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
         </checkstyle.violation.ignore>
         <classindex.version>3.4</classindex.version>
-        <codemodel.version>3.2.3</codemodel.version>
+        <codemodel.version>3.2.4</codemodel.version>
         <codemirror-webjars.version>5.1</codemirror-webjars.version>
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
-        <commons-collections4.version>4.1</commons-collections4.version>
+        <commons-collections4.version>4.4</commons-collections4.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-vfs2.version>2.1.1660580.2</commons-vfs2.version>
         <commons-vfs2-s3.version>2.4.2</commons-vfs2-s3.version>
         <commons-vfs2-azure.version>1.2.patched</commons-vfs2-azure.version>
-        <commons-jcs.version>2.2</commons-jcs.version>
-        <commons-text.version>1.3</commons-text.version>
-        <compile-testing.version>0.15</compile-testing.version>
-        <cybersource.version>6.2.6</cybersource.version>
+        <commons-jcs.version>2.2.1</commons-jcs.version>
+        <commons-text.version>1.8</commons-text.version>
+        <compile-testing.version>0.18</compile-testing.version>
+        <cybersource.version>6.2.7</cybersource.version>
         <cxf-xjc-plugin.version>3.2.1</cxf-xjc-plugin.version>
         <cxf-codegen-plugin.version>3.2.2</cxf-codegen-plugin.version>
         <cxf.codegenplugin.forkmode>once</cxf.codegenplugin.forkmode>
@@ -147,14 +147,14 @@
         <docker-maven-plugin.version>1.2.0</docker-maven-plugin.version>
         <doxia.version>1.8</doxia.version>
         <ehcache-jcache.version>1.0.1</ehcache-jcache.version>
-        <ehcache3.version>3.7.1</ehcache3.version>
+        <ehcache3.version>3.8.1</ehcache3.version>
         <elasticsearch-head-webjars.version>5.0.0</elasticsearch-head-webjars.version>
         <extjs-webjars.version>5.1.1-light</extjs-webjars.version>
         <extra.jvmargs></extra.jvmargs>
         <failsafe.parallel />
         <failsafe.useUnlimitedThreads />
         <fontawesome-webjars.version>4.6.3</fontawesome-webjars.version>
-        <flying-saucer.version>9.1.16</flying-saucer.version>
+        <flying-saucer.version>9.1.18</flying-saucer.version>
         <gemfire.version>9.3.0</gemfire.version>
         <geotools.version>21.0</geotools.version>
         <github-com-gregra81-jqzoom-webjars.version>1.0.1</github-com-gregra81-jqzoom-webjars.version>
@@ -182,9 +182,9 @@
         <jackson-datatype-jts.version>2.4</jackson-datatype-jts.version>
         <javauom.version>1.0</javauom.version>
         <javauom-ri.version>1.2</javauom-ri.version>
-        <javauom-si.version>0.8</javauom-si.version>
-        <javauom-se.version>1.0.9</javauom-se.version>
-        <javauom-systems.version>0.9</javauom-systems.version>
+        <javauom-si.version>1.3.1</javauom-si.version>
+        <javauom-se.version>1.0.10</javauom-se.version>
+        <javauom-systems.version>1.0</javauom-systems.version>
         <javauom-jackson-module.version>1.3.5.NEMESIS-RELEASE</javauom-jackson-module.version>
         <javaparser.version>3.8.0</javaparser.version>
         <java-types.version>1.0.1</java-types.version>
@@ -192,8 +192,8 @@
         <javax-activation.version>1.2.0</javax-activation.version>
         <jsr250.version>1.0</jsr250.version>
         <javax-interceptor.version>3.1</javax-interceptor.version>
-        <javax-jsp.version>2.3.2-b02</javax-jsp.version>
-        <jansi.version>1.16</jansi.version>
+        <javax-jsp.version>2.3.3</javax-jsp.version>
+        <jansi.version>1.18</jansi.version>
         <jawr.version>3.13.NEMESIS-RELEASE</jawr.version>
         <jaxb.version>2.3.0.1</jaxb.version>
         <jcip.version>1.0</jcip.version>
@@ -227,10 +227,9 @@
         <jsoup.version>1.11.2</jsoup.version>
         <jstree.version>3.3.3</jstree.version>
         <jstree-bootstrap-theme.version>1.0.1</jstree-bootstrap-theme.version>
-        <jedis.version>2.9.0</jedis.version>
         <license-maven-plugin>1.20</license-maven-plugin>
         <!--kie.version>7.8.0-SNAPSHOT</kie.version-->
-        <kie.version>7.20.0.Final</kie.version>
+        <kie.version>7.27.0.Final</kie.version>
         <magicsuggest-webjars.version>2.1.4</magicsuggest-webjars.version>
         <materializecss-webjars.version>0.98.1</materializecss-webjars.version>
         <maven-archetype-plugin.version>3.1.0</maven-archetype-plugin.version>
@@ -281,9 +280,9 @@
         <nemesis-tools.version>2.0.0.RELEASE</nemesis-tools.version>
         <nemesis-rules.version>2.0.0.RELEASE</nemesis-rules.version>
         <opencmis.version>1.1.0</opencmis.version>
-        <olingo-odata2.version>2.0.9</olingo-odata2.version>
-        <olingo-odata4.version>4.4.0</olingo-odata4.version>
-        <openpdf.version>1.2.16</openpdf.version>
+        <olingo-odata2.version>2.0.11</olingo-odata2.version>
+        <olingo-odata4.version>4.6.0</olingo-odata4.version>
+        <openpdf.version>1.3.11</openpdf.version>
         <oracle.version>12.2.0.1</oracle.version>
         <orika.version>1.5.3-nemesis</orika.version>
         <paypal-sdk.version>2.15.122</paypal-sdk.version>
@@ -295,19 +294,19 @@
         <phantonjs-maven-plugin.skip>false</phantonjs-maven-plugin.skip>
         <phantomjs-maven-plugin.version>0.7</phantomjs-maven-plugin.version>
         <phantomjs-driver.version>1.4.4</phantomjs-driver.version>
-        <progressbar.version>0.7.2</progressbar.version>
+        <progressbar.version>0.7.4</progressbar.version>
         <project-scm.id>github</project-scm.id>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <protobuf.version>3.6.1</protobuf.version>
+        <protobuf.version>3.10.0</protobuf.version>
         <protobuf-java-format.version>1.4</protobuf-java-format.version>
         <recaptcha4j.version>0.0.7</recaptcha4j.version>
-        <reflections.version>0.9.10</reflections.version>
+        <reflections.version>0.9.11</reflections.version>
         <redis-embedded.version>0.6</redis-embedded.version>
         <redis-hibernate.version>2.4.0</redis-hibernate.version>
-        <redis-quartz.version>1.1.13</redis-quartz.version>
-        <riskified.version>1.1.0</riskified.version>
-        <rometools.version>1.11.1</rometools.version>
+        <redis-quartz.version>1.1.15</redis-quartz.version>
+        <riskified.version>1.2.4</riskified.version>
+        <rometools.version>1.12.2</rometools.version>
         <selenium.version>3.9.1</selenium.version>
         <selenium-htmlunit.version>3.9.1</selenium-htmlunit.version>
         <smartsprites.version>0.2.13</smartsprites.version>
@@ -337,26 +336,26 @@
         <spring-social-facebook.version>3.0.0.NEMESIS-RELEASE</spring-social-facebook.version>
         <junit-surefire-provider.version>1.1.0</junit-surefire-provider.version>
         <supercsv.version>2.4.0</supercsv.version>
-        <stripe-api.version>9.4.0</stripe-api.version>
-        <klarna-sdk.version>3.0.6</klarna-sdk.version>
+        <stripe-api.version>12.0.0</stripe-api.version>
+        <klarna-sdk.version>3.1.1</klarna-sdk.version>
         <stompwebsocket-webjars.version>2.3.4</stompwebsocket-webjars.version>
         <tika-parsers.version>1.13</tika-parsers.version>
-        <thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
+        <thymeleaf-layout-dialect.version>2.4.1</thymeleaf-layout-dialect.version>
         <!--thymeleaf.version>3.0.1.RELEASE</thymeleaf.version>
         <thymeleaf-layout-dialect.version>2.0.1</thymeleaf-layout-dialect.version-->
         <thymeleaf-jawr.version>2.0.2.NEMESIS-RELEASE</thymeleaf-jawr.version>
         <thymeleaf-extras-springsecurity4.version>3.0.2.RELEASE</thymeleaf-extras-springsecurity4.version>
-        <twilio-sdk.version>7.37.2</twilio-sdk.version>
+        <twilio-sdk.version>7.43.0</twilio-sdk.version>
         <wagon.version>3.3.2</wagon.version>
         <webjars-locator.version>0.31</webjars-locator.version>
         <wuic.version>0.5.2.RC1</wuic.version>
         <!-- the 18.xx version requires Java9 -->
-        <w3c-nu-validator.version>15.6.29</w3c-nu-validator.version>
+        <w3c-nu-validator.version>18.11.5</w3c-nu-validator.version>
         <xml-apis.version>1.4.01</xml-apis.version> <!-- xml-apis has latest version of 1.4.01 - do not UPDATE -->
         <xalan.version>2.7.2</xalan.version>
         <xstream.version>1.4.11</xstream.version>
         <yubico.version>3.0.5</yubico.version>
-        <zxing.version>3.3.3</zxing.version>
+        <zxing.version>3.4.0</zxing.version>
     </properties>
 
     <repositories>
