--- a/pom.xml
+++ b/pom.xml
@@ -276,7 +276,7 @@
         <maven-plugin-api.version>3.5.0</maven-plugin-api.version>
         <maven-plugin-annotations.version>3.5</maven-plugin-annotations.version>
         <money-validation.version>2.0.0</money-validation.version>
-        <nemesis.version>2.1.47.RELEASE</nemesis.version>
+        <nemesis.version>2.1.48.RELEASE</nemesis.version>
         <nemesis-tools.version>2.0.0.RELEASE</nemesis-tools.version>
         <nemesis-rules.version>2.0.0.RELEASE</nemesis-rules.version>
         <opencmis.version>1.1.0</opencmis.version>
@@ -2077,6 +2077,7 @@
                         <releaseProfiles>nemesis-release</releaseProfiles>
                         <useReleaseProfile>true</useReleaseProfile>
                         <goals>clean deploy javadoc:javadoc site site:deploy</goals>
+                        <completionGoals>clean deploy javadoc:javadoc site site:deploy</completionGoals>
                         <scmCommentPrefix>[maven-release-plugin][ci-skip]</scmCommentPrefix>
                         <localCheckout>true</localCheckout>
                         <tagNameFormat>v@{project.version}</tagNameFormat>
