Add extra execution for the source plugin to avoid duplicate source jars being uploaded (see MNG-5939)

--- a/pom.xml
+++ b/pom.xml
@@ -1973,6 +1973,10 @@
                                 <goal>jar</goal>
                             </goals>
                         </execution>
+                        <execution>
+                            <id>default</id>
+                            <phase>none</phase>
+                        </execution>
                     </executions>
                 </plugin>
                 <plugin>
