--- a/pom.xml
+++ b/pom.xml
@@ -123,14 +123,14 @@
         <amazon-aws-sdk.version>1.11.538</amazon-aws-sdk.version>
         <asciidoctor.version>1.6.0</asciidoctor.version>
         <asciidoctorj-diagram.version>1.5.16</asciidoctorj-diagram.version>
-        <atmosphere.version>2.2.6</atmosphere.version>
+        <atmosphere.version>2.2.13</atmosphere.version>
         <camunda.version>7.11.0</camunda.version>
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
         </checkstyle.violation.ignore>
         <classindex.version>3-NEMESIS</classindex.version>
         <codemodel.version>3.2.4</codemodel.version>
         <codemirror-webjars.version>5.1</codemirror-webjars.version>
-        <commons-beanutils.version>1.9.3</commons-beanutils.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <commons-io.version>2.6</commons-io.version>
@@ -165,7 +165,7 @@
         <google-maps-services.version>0.2.9</google-maps-services.version>
         <gsap-js.version>1.13.1</gsap-js.version>
         <gridgain.version>6.6.9</gridgain.version>
-        <guava.version>23.0</guava.version>
+        <guava.version>28.1-jre</guava.version>
         <handlebars-webjars.version>4.0.2</handlebars-webjars.version>
         <hazelcast-quartz.version>1.0.4</hazelcast-quartz.version>
         <!--hibernate.version>5.2.17.Final</hibernate.version-->
@@ -203,7 +203,8 @@
         <jadira-usertype.version>7.0.0.CR1</jadira-usertype.version>
         <jmeter-maven-plugin.version>1.10.1</jmeter-maven-plugin.version>
         <jpasskit.version>0.1.1</jpasskit.version>
-        <jquery-webjars.version>1.12.4</jquery-webjars.version>
+        <bcpkix-jdk15on.version>1.64</bcpkix-jdk15on.version>
+        <jquery-webjars.version>3.4.1</jquery-webjars.version>
         <jqueryui-webjars.version>1.12.1</jqueryui-webjars.version>
         <jquerymobile-webjars.version>1.4.5</jquerymobile-webjars.version>
         <jquerymobile-spinbox-webjars.version>1.4.4</jquerymobile-spinbox-webjars.version>
@@ -310,12 +311,15 @@
         <riskified.version>1.2.4</riskified.version>
         <rometools.version>1.12.2</rometools.version>
         <selenium.version>3.9.1</selenium.version>
+        <byte-buddy-agent.version>1.10.4</byte-buddy-agent.version>
+        <byte-buddy.version>1.10.4</byte-buddy.version>
+        <okhttp.version>4.2.2</okhttp.version>
         <selenium-htmlunit.version>3.9.1</selenium-htmlunit.version>
         <smartsprites.version>0.2.13</smartsprites.version>
         <slick-webjars.version>1.6.0</slick-webjars.version>
         <tablesaw-webjars.version>2.0.3</tablesaw-webjars.version>
         <tooltipster-webjars.version>4.2.5</tooltipster-webjars.version>
-        <bootstrap-webjars.version>3.3.6</bootstrap-webjars.version>
+        <bootstrap-webjars.version>4.3.1</bootstrap-webjars.version>
         <bootstrap-select-webjars.version>1.10.0</bootstrap-select-webjars.version>
         <bootstrap-datepicker-webjars.version>1.9.0</bootstrap-datepicker-webjars.version>
         <bootstrap-slider-webjars.version>7.1.0</bootstrap-slider-webjars.version>
@@ -339,10 +343,14 @@
         <sun-mail-impl.version>1.6.2</sun-mail-impl.version>
         <junit-surefire-provider.version>1.1.0</junit-surefire-provider.version>
         <supercsv.version>2.4.0</supercsv.version>
+        <dozer.version>6.5.0</dozer.version>
         <stripe-api.version>12.0.0</stripe-api.version>
         <klarna-sdk.version>3.1.1</klarna-sdk.version>
         <stompwebsocket-webjars.version>2.3.4</stompwebsocket-webjars.version>
-        <tika-parsers.version>1.13</tika-parsers.version>
+        <tika-parsers.version>1.20</tika-parsers.version>
+        <uimafit-core.version>3.0.0</uimafit-core.version>
+        <metadata-extractor.version>2.12.0</metadata-extractor.version>
+        <xmpcore.version>6.1.10</xmpcore.version>
         <thymeleaf-layout-dialect.version>2.4.1</thymeleaf-layout-dialect.version>
         <!--thymeleaf.version>3.0.1.RELEASE</thymeleaf.version>
         <thymeleaf-layout-dialect.version>2.0.1</thymeleaf-layout-dialect.version-->
@@ -353,6 +361,7 @@
         <wuic.version>0.5.2.RC1</wuic.version>
         <!-- the 18.xx version requires Java9 -->
         <w3c-nu-validator.version>18.11.5</w3c-nu-validator.version>
+        <xerces.version>2.12.0</xerces.version>
         <xml-apis.version>1.4.01</xml-apis.version> <!-- xml-apis has latest version of 1.4.01 - do not UPDATE -->
         <xalan.version>2.7.2</xalan.version>
         <xstream.version>1.4.11</xstream.version>
@@ -663,6 +672,22 @@
                 <artifactId>tika-parsers</artifactId>
                 <version>${tika-parsers.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.uima</groupId>
+                <artifactId>uimafit-core</artifactId>
+                <version>${uimafit-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.drewnoakes</groupId>
+                <artifactId>metadata-extractor</artifactId>
+                <version>${metadata-extractor.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.adobe.xmp</groupId>
+                <artifactId>xmpcore</artifactId>
+                <version>${xmpcore.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
@@ -1145,6 +1170,17 @@
                 <groupId>net.sf.supercsv</groupId>
                 <artifactId>super-csv-dozer</artifactId>
                 <version>${supercsv.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>net.sf.dozer</groupId>
+                        <artifactId>dozer</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>com.github.dozermapper</groupId>
+                <artifactId>dozer-core</artifactId>
+                <version>${dozer.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.jadira.usertype</groupId>
@@ -1281,6 +1317,11 @@
                 <groupId>de.brendamour</groupId>
                 <artifactId>jpasskit</artifactId>
                 <version>${jpasskit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcpkix-jdk15on</artifactId>
+                <version>${bcpkix-jdk15on.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.sun.mail</groupId>
@@ -1882,6 +1923,11 @@
                 <version>${w3c-nu-validator.version}</version>
             </dependency>
             <dependency>
+                <groupId>xerces</groupId>
+                <artifactId>xercesImpl</artifactId>
+                <version>${xerces.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>htmlunit-driver</artifactId>
                 <version>${selenium-htmlunit.version}</version>
@@ -1893,6 +1939,24 @@
                 <version>${selenium.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>${byte-buddy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy-agent</artifactId>
+                <version>${byte-buddy-agent.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
+                <scope>test</scope>
+            </dependency>
+
             <dependency>
                 <groupId>com.nemesis.platform</groupId>
                 <artifactId>nemesis-platform-core</artifactId>
