--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,7 @@
         <javamoney.version>1.3</javamoney.version>
         <jackson-datatype-money.version>1.1.1</jackson-datatype-money.version>
         <jackson-datatype-jts.version>2.4</jackson-datatype-jts.version>
+        <jackson-datatype.version>2.10.1</jackson-datatype.version>
         <javauom.version>1.0</javauom.version>
         <javauom-ri.version>1.2</javauom-ri.version>
         <javauom-si.version>1.3.1</javauom-si.version>
@@ -254,6 +255,7 @@
         <maven-remote-resources-plugin.version>1.4</maven-remote-resources-plugin.version>
         <maven-release-plugin.version>3.0.1-NEMESIS-RELEASE</maven-release-plugin.version>
         <maven-plugin-log4j.version>1.0.1</maven-plugin-log4j.version>
+        <owasp.esapi.version>2.2.0.0</owasp.esapi.version>
         <maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
         <maven-project-info-reports.plugin>2.9</maven-project-info-reports.plugin>
         <maven-appassembler-plugin.version>1.8</maven-appassembler-plugin.version>
@@ -467,6 +469,17 @@
                 <groupId>com.helger</groupId>
                 <artifactId>jcodemodel</artifactId>
                 <version>${codemodel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.owasp.esapi</groupId>
+                <artifactId>esapi</artifactId>
+                <version>${owasp.esapi.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-lang</groupId>
+                        <artifactId>commons-lang</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
@@ -1407,6 +1420,11 @@
                 <groupId>com.bedatadriven</groupId>
                 <artifactId>jackson-datatype-jts</artifactId>
                 <version>${jackson-datatype-jts.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson-datatype.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.searchbox</groupId>
